Adjusted colour of asterisk, adjusted size of delivery partner images and added lables
On the delivery options page, I adjusted the colour of the asterisk for mandatory fields to be filled in. I adjusted the size of the delivery partner images and I added labels under certain fields such as Name and address fields.

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,12 @@
 	color: var(--text_dark_green);
 }
 
+/* Style for red text */
+.text-red {
+	color: var(--mandatory_input_field_asterisk);
+	font-weight: bold;
+}
+
 
 /* Long button custom style */
 .custom-btn-long {
