Semantic HTML5 tags and Readme.md
1. First portion of semantic HTML5 tags is added onto the pages.
2, index.html changed for better user experience with larger fonts etc.
3. Documentation started in Readmer.md file.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,12 +55,13 @@
 }
 
 .custom-footer .footer-link {
+  text-decoration: none;
   color: white;
 }
 
 .custom-footer .footer-link:hover {
   text-decoration: underline;
-  color: #ffcc00; /* hover color */
+  color: #ffcc00;
 }
 
 
